--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.1",
     "gh-pages": "^4.0.0",
     "nanoid": "^4.0.0",
+    "notiflix": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
